# cmake-googletest

./: .gitmodules  CMakeLists.txt
app/: CMakeLists.txt
app/include/: function.h
app/src/: function.cpp
test/: CMakeLists.txt  test.cpp
